--- a/Text-Speech.html
+++ b/Text-Speech.html
@@ -29,6 +29,7 @@
         }
         button{
             border: 3px solid white;
+            border-radius: 3px;
         }
     </style>
     <script >
