Commited the changes

--- a/Snake_game/snake.html
+++ b/Snake_game/snake.html
@@ -11,6 +11,7 @@
     
     <div id="container">
         <h1 id="head">Welcome  To Snake Game </h1>
+        <h2 style="font-size: 40px;font-family:sans-serif">Created by Stella Maryian's</h2>
         <canvas width="500" height="500" id="board"></canvas>
         <div  id="score">0</div>
         <button id="reset">Reset</button>
